--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <a href="" class="soc-link"
                       ><svg class="soc-icon" width="20" height="20">
                         <use
-                          href="./images/icons.svg/sprait.svg#icon-linkedin-1"
+                          href="./images/icons.svg/sprait.svg#icon-linkedin"
                         ></use></svg
                     ></a>
                   </li>
@@ -213,7 +213,7 @@
                     <a href="" class="soc-link"
                       ><svg class="soc-icon" width="20" height="20">
                         <use
-                          href="./images/icons.svg/sprait.svg#icon-linkedin-1"
+                          href="./images/icons.svg/sprait.svg#icon-linkedin"
                         ></use></svg
                     ></a>
                   </li>
@@ -259,7 +259,7 @@
                     <a href="" class="soc-link"
                       ><svg class="soc-icon" width="20" height="20">
                         <use
-                          href="./images/icons.svg/sprait.svg#icon-linkedin-1"
+                          href="./images/icons.svg/sprait.svg#icon-linkedin"
                         ></use></svg
                     ></a>
                   </li>
@@ -308,7 +308,7 @@
                     <a href="" class="soc-link"
                       ><svg class="soc-icon" width="20" height="20">
                         <use
-                           href="./images/icons.svg/sprait.svg#icon-linkedin-1" 
+                           href="./images/icons.svg/sprait.svg#icon-linkedin" 
                         ></use></svg
                     ></a>
                   </li>
@@ -324,31 +324,48 @@
       <section class="section-customers">
         <div class="container">
           <h2 class="customers">Customers</h2>
-          <ul>
+          <ul class="customers-list">
+            <li class="icon-cust">
+              <a class="link-cust " href="" target="_blank" rel=""
+                ><svg class="icon">
+                  <use 
+                  href="./images/icons.svg/sprait.svg#icon-footer1"></use></svg
+              ></a>
+            </li>
+           <li class="icon-cust">
+              <a class="link-cust list" href="" target="_blank" rel=""
+                ><svg class="icon">
+                  <use 
+                  href="./images/icons.svg/sprait.svg#icon-footer2"></use></svg
+              ></a>
+            </li>
             <li class="icon-cust">
               <a class="link-cust list" href="" target="_blank" rel=""
-                ><svg class="icon icon-instagram-2">
+                ><svg class="icon">
                   <use 
-                  href="./images/icons.svg/sprite1.svg#icon-footer2"></use></svg
+                  href="./images/icons.svg/sprait.svg#icon-footer3"></use></svg
               ></a>
             </li>
             <li class="icon-cust">
-              <a class="link-cust" href=""
-                ><svg class="icon icon-instagram-2">
-                  <use href=""></use></svg
+              <a class="link-cust list" href="" target="_blank" rel=""
+                ><svg class="icon">
+                  <use 
+                  href="./images/icons.svg/sprait.svg#icon-footer4"></use></svg
               ></a>
             </li>
             <li class="icon-cust">
-              <a class="link-cust" href=""> </a>
+              <a class="link-cust list" href="" target="_blank" rel=""
+                ><svg class="icon">
+                  <use 
+                  href="./images/icons.svg/sprait.svg#icon-footer5"></use></svg
+              ></a>
             </li>
             <li class="icon-cust">
-              <a class="link-cust" href=""></a>
-            </li>
-            <li class="icon-cust">
-              <a class="link-cust" href=""></a>
-            </li>
-            <li class="icon-cust">
-              <a class="link-cust" href=""></a>
+              <a class="link-cust list" href="" target="_blank" rel=""
+                ><svg class="icon">
+                  <use 
+                  href="./images/icons.svg/sprait.svg#icon-footer6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
