--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
       </section>
       <!-- section3 -->
-      <section class="section what-wedoing">
+      <section class=" what-wedoing">
         <div class="container">
           <h2 class="title-ferst">What are we doing</h2>
           <ul class="header-list list">
@@ -373,8 +373,9 @@
     </main>
     <!-- footer -->
 
-    <footer class="footer">
-      <div class="container">
+     <footer class="footer">
+      <div class="container footer-container">
+      <div class="logo-box">
         <a class="logo-f link" href="./index.html"
           ><span class="log">WEB</span>STUDIO</a
         >
@@ -383,22 +384,47 @@
           digital marketing & growth solutions.
         </p>
       </div>
-      <div class="footer-social">
+
+      <div class="media">
         <h3 class="foot-tit">Social media</h3>
-        <ul class="foot-soc">
-          <li class="social-list">
-            <a class="soc-link" href=""
-              ><svg class="icon icon-inlinke">
-                <use ></use></svg
-            ></a>
-          </li>
-          <li class="social-list">
-            <a></a>
-          </li>
-          <li class="social-list"></li>
-          <li class="social-list"></li>
-        </ul>
-      </div>
+        <ul class="soc-list list">
+           <li class="soc-list-footer">
+                   <a href=""class="soc-link-footer">                                                                                                                             
+                     <svg class="soc-icon-footer" width="24" height="24">
+                        <use
+                          href="./images/icons.svg/sprait.svg#icon-instagram-21"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-footer">
+                    <a href="" class="soc-link-footer"
+                      ><svg class="soc-icon-footer" width="24" height="24">
+                        <use
+                          href="./images/icons.svg/sprait.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-list-footer">
+                    <a href="" class="soc-link-footer"
+                      ><svg class="soc-icon-footer" width="24" height="24">
+                        <use
+                          href="./images/icons.svg/sprait.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-list-footer">
+                    <a href="" class="soc-link-footer"
+                      ><svg class="soc-icon-footer" width="24" height="24">
+                        <use
+                           href="./images/icons.svg/sprait.svg#icon-linkedin" 
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
+               </div>
     </footer>
-  </body>
-</html>
+   </body>
+</html>              
+
+
