--- a/portfolio.html
+++ b/portfolio.html
@@ -195,7 +195,8 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
+      <div class="logo-box">
         <a class="logo-f link" href="./index.html"
           ><span class="log">WEB</span>STUDIO</a
         >
@@ -204,6 +205,45 @@
           digital marketing & growth solutions.
         </p>
       </div>
+
+      <div class="media">
+        <h3 class="foot-tit">Social media</h3>
+        <ul class="soc-list list">
+           <li class="soc-list-footer">
+                   <a href=""class="soc-link-footer">                                                                                                                             
+                     <svg class="soc-icon-footer" width="24" height="24">
+                        <use
+                          href="./images/icons.svg/sprait.svg#icon-instagram-21"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-footer">
+                    <a href="" class="soc-link-footer"
+                      ><svg class="soc-icon-footer" width="24" height="24">
+                        <use
+                          href="./images/icons.svg/sprait.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-list-footer">
+                    <a href="" class="soc-link-footer"
+                      ><svg class="soc-icon-footer" width="24" height="24">
+                        <use
+                          href="./images/icons.svg/sprait.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-list-footer">
+                    <a href="" class="soc-link-footer"
+                      ><svg class="soc-icon-footer" width="24" height="24">
+                        <use
+                           href="./images/icons.svg/sprait.svg#icon-linkedin" 
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
+               </div>
     </footer>
   </body>
 </html>
