--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </ul>
                 
             <li class="team">
-              <img
+              <img class="imagis-portfolio"
                 src="./images/portfolio/daniel1.jpg"
                 alt="UI Designer"
                 width="264"
