--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
         <div class="container">
           <ul class="header-list list portfolio">
             <li class="list-portfolio">
-              <img
+              <img class="img-portfolio"
                 src="./images/portfolio/bankingapp1.jpg"
                 alt="bankingapp"
                 width="360"
@@ -94,7 +94,7 @@
               </div>
             </li>
             <li class="list-portfolio">
-              <img
+              <img class="img-portfolio"
                 src="./images/portfolio/cashlispay.jpg"
                 alt="charlespaymant"
                 width="360"
@@ -106,7 +106,7 @@
               </div>
             </li>
             <li class="list-portfolio">
-              <img
+              <img class="img-portfolio"
                 src="./images/portfolio/meditaonapp.jpg"
                 alt="bankingapp"
                 width="360"
@@ -118,7 +118,7 @@
               </div>
             </li>
             <li class="list-portfolio">
-              <img
+              <img class="img-portfolio"
                 src="./images/portfolio/taxiservice1.jpg"
                 alt="taxiservice"
                 width="360"
@@ -130,7 +130,7 @@
               </div>
             </li>
             <li class="list-portfolio">
-              <img
+              <img class="img-portfolio"
                 src="./images/portfolio/screenilustration.jpg"
                 alt="screenilustration"
                 width="360"
@@ -142,7 +142,7 @@
               </div>
             </li>
             <li class="list-portfolio">
-              <img
+              <img class="img-portfolio"
                 src="./images/portfolio/onlinecurses.jpg"
                 alt="onlinecurses"
                 width="360"
@@ -154,7 +154,7 @@
               </div>
             </li>
             <li class="list-portfolio">
-              <img
+              <img class="img-portfolio"
                 src="./images/portfolio/instagramstories.jpg"
                 alt="instagramstories"
                 width="360"
@@ -166,7 +166,7 @@
               </div>
             </li>
             <li class="list-portfolio">
-              <img
+              <img class="img-portfolio"
                 src="./images/portfolio/organikfood1.jpg"
                 alt="organicfood"
                 width="360"
@@ -178,7 +178,7 @@
               </div>
             </li>
             <li class="list-portfolio">
-              <img
+              <img class="img-portfolio"
                 src="./images/portfolio/coffe.jpg"
                 alt="freschkafe"
                 width="360"
