--- a/index.html
+++ b/index.html
@@ -69,15 +69,14 @@
 
           <ul class="header-list list">
             <li class="title icon-delivery">
-              <div class="icons-paragraf"></div>
+              
               <h3 class="title-p">Strategy</h3>
               <p class="paragraf">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="title icon-clock .">
-              <div class="icons-paragraf"></div>
+            <li class="title icon-clock">
               <h3 class="title-p">Punctuality</h3>
               <p class="paragraf">
                 Bring the key message to the brand's audience for the best price
@@ -85,15 +84,13 @@
               </p>
             </li>
             <li class="title icon-comp">
-              <div class="icons-paragraf"></div>
               <h3 class="title-p">Diligence</h3>
               <p class="paragraf">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="title icon-astronaut .">
-              <div class="icons-paragraf"></div>
+            <li class="title icon-astronaut">
               <h3 class="title-p">Technologies</h3>
               <p class="paragraf">
                 Design practice focused on digital experiences. We bring forth a
@@ -329,7 +326,7 @@
               <a class="link-cust " href="" target="_blank" rel=""
                 ><svg class="icon">
                   <use 
-                  href="./images/icons.svg/sprait.svg#icon-footer1"></use></svg
+                  href="./images/icons.svg/sprait.svg#icon-customer1"></use></svg
               ></a>
             </li>
            <li class="icon-cust">
