--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
               <a class="link-cust " href="" target="_blank" rel=""
                 ><svg class="icon">
                   <use 
-                  href="./images/icons.svg/sprait.svg#"></use></svg
+                  href="./images/icons.svg/sprait.svg#icon-customer1"></use></svg
               ></a>
             </li>
            <li class="icon-cust">
