--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       </div>
 
       <div class="media">
-        <h3 class="foot-tit">Social media</h3>
+        <b class="foot-tit">Social media</b>
         <ul class="soc-list list">
            <li class="soc-list-footer">
                    <a href=""class="soc-link-footer">                                                                                                                             
