--- a/index.html
+++ b/index.html
@@ -421,6 +421,17 @@
                 </ul>
                </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button"class="modal-close-btn">
+          <svg class="icon-modal">
+            <use href="./images/icons.svg/sprait.svg#icon-close"
+            width="8"
+            height="8"></use>
+          </svg>
+        </button>
+      </div>
+  </div>
    </body>
 </html>              
 
